The Hero was adjusted in order to fix a gap issue

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ main {
   }
 
   main {
-    padding-top: 90px;
+    padding-top: 80px;
   }
 }
 
@@ -98,7 +98,7 @@ main {
   }
 
   main {
-    padding-top: 85px;
+    padding-top: 80px;
   }
 }
 
@@ -125,7 +125,7 @@ main {
   }
 
   main {
-    padding-top: 75px;
+    padding-top: 70px;
   }
 
   .section {
@@ -144,7 +144,7 @@ main {
   }
 
   main {
-    padding-top: 70px;
+    padding-top: 60px;
   }
 
   .section {
@@ -167,7 +167,7 @@ main {
   }
 
   main {
-    padding-top: 65px;
+    padding-top: 55px;
   }
 
   body {
